# parmesan

./: CHANGELOG.md  eqNoNeq.sh  parmesan.cabal
app/: Main.hs
src/: MyLib.hs
test/golden/eq-no-neq/: case-01.in  case-02.in  case-02.out
