cabal-version:      2.4
name:               parmesan
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             santiweight
maintainer:         santiago.weight@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, req, text, directory, filepath, bytestring, Cabal, github, modern-uri, zip, lens, regex-tdfa, process
    hs-source-dirs:   src
    default-language: Haskell2010

executable parmesan
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0, directory, filepath, bytestring, Cabal, text, parmesan, github, modern-uri, zip, lens, regex-tdfa, process

    hs-source-dirs:   app
    default-language: Haskell2010
